--- a/cip-test/.project
+++ b/cip-test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cip-common</name>
+	<name>cip-test</name>
 	<comment></comment>
 	<projects>
 	</projects>
